Attempt Fix of `Path.of` Usage
Replace uses of `Path.of` with `Paths.get` for (attempted) windows compatability.